--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
       <div class="nav-container">
         <a href="/" class="logo">
           <span class="logo-square"></span>
-          <span>Roblox x Outpost</span>
+          <span>AppNation x Outpost</span>
         </a>
         <div class="nav-links">
           <a href="#problem">Problem</a>
@@ -708,10 +708,8 @@
       </div>
 
       <h1>
-        <span class="game-icon controller">🎮</span>
-        <span class="game-icon dice">🎲</span>
-        Get <span class="solid-green-text dynamic-percentage-mexico">21%</span> more out<br/>
-        of Mexico with <span class="roblox-square"></span>utpost
+  
+        Get <span class="solid-green-text dynamic-percentage-mexico">21%</span> more out<br/> of Mexico with Outpost
       </h1>
 
       <p class="hero-subtitle">
