--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
       </h1>
 
       <p class="hero-subtitle">
-        Roblox is leaving $<span class="dynamic-value-mexico">2.9M</span> on the table every year in Mexico.
+        AppNation is leaving $<span class="dynamic-value-mexico">2.9M</span> on the table every year in Mexico.
         <br/><br/><strong>Unlock it with Outpost.</strong>
       </p>
 
@@ -724,7 +724,7 @@
 
       <div class="hero-callout">
         <p class="hero-callout-text">
-          <strong>Outpost</strong> partners with gaming platforms like <strong>Roblox</strong> so they can sell in Mexico like a local.
+          <strong>Outpost</strong> partners with gaming platforms like <strong>AppNation</strong> so they can sell in Mexico like a local.
           Offload your tax, compliance, payments, legal and operational burdens to Outpost.
         </p>
       </div>
@@ -738,7 +738,7 @@
         <h2 class="section-title">The hidden cost of global expansion</h2>
         <p class="section-subtitle">
           Global gaming platforms expanding to Mexico are leaving substantial value on the table every year from inefficient payments and tax infrastructure.
-          We estimate it's costing Roblox $<span class="dynamic-value">2.9M</span> per annum in app store fees and additional costs.
+          We estimate it's costing AppNation $<span class="dynamic-value">2.9M</span> per annum in app store fees and additional costs.
         </p>
       </div>
 
@@ -861,7 +861,7 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
-          The impact Outpost can have<br/>for Roblox in Mexico
+          The impact Outpost can have<br/>for AppNation in Mexico
         </h2>
       </div>
 
@@ -1215,7 +1215,7 @@
       }
     }
 
-    // Mexico-style calculator constants (from "Roblox MX w Appstore")
+    // Mexico-style calculator constants (from "AppNation MX w Appstore")
     const MexicoCalc = {
       OUTPOST_FEE: 0.085,
       APP_STORE_FEE: 0.30,
