--- a/index.html
+++ b/index.html
@@ -677,6 +677,61 @@
     table { min-width: 700px; }
   }
 </style>
+
+<style>
+/* === Hero spacing & width (match screenshot) === */
+.hero { padding: 176px 0 112px; }
+.hero .container { max-width: 940px; }
+h1 { font-size: clamp(56px, 9.6vw, 96px); line-height: 0.95; margin-bottom: 28px; }
+.hero-subtitle { font-size: 20px; color: var(--text-secondary); margin-top: 8px; margin-bottom: 24px; }
+
+/* === Solid green emphasis in headline === */
+.solid-green-text { color: var(--primary-green); font-weight: 800; }
+
+/* === CTA group (spacing + alignment) === */
+.hero-buttons {
+  display: flex; justify-content: center; gap: 16px; margin-top: 20px; margin-bottom: 8px;
+}
+.btn-cta-large {
+  background: var(--primary-green) !important; color: #fff !important;
+  padding: 14px 22px; border-radius: 9999px; font-weight: 700; font-size: 16px;
+}
+.btn-cta-large:hover { background: #0e9f6e !important; }
+.btn-secondary {
+  background: #fff; border: 1px solid var(--border-color); color: var(--text-primary);
+  padding: 12px 20px; border-radius: 9999px; font-weight: 700;
+}
+
+/* === The missing “extra box” under the CTAs === */
+.hero-callout {
+  margin: 32px auto 0;
+  background: #fff;
+  border: 1px solid var(--border-color);
+  border-top: 4px solid var(--primary-green);
+  border-radius: 16px;
+  padding: 22px 24px;
+  max-width: 880px;
+  box-shadow: 0 10px 28px rgba(0,0,0,0.06);
+}
+.hero-callout-text {
+  font-size: 16px; line-height: 1.65; color: var(--text-secondary);
+}
+.hero-callout strong { color: var(--text-primary); }
+
+/* tighten section spacing below the hero to keep the same visual rhythm */
+.section#problem { padding-top: 88px; }
+
+/* mobile tweaks */
+@media (max-width: 768px) {
+  .hero { padding: 140px 0 80px; }
+  .hero .container { max-width: 100%; }
+  .hero-subtitle { font-size: 18px; }
+  .hero-buttons { flex-direction: column; gap: 12px; }
+  .hero-callout { margin-top: 24px; padding: 18px; border-radius: 14px; }
+}
+</style>
+
+
 </head>
 <body>
   <!-- Navigation -->
