--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
   <div class="container">
     <div class="disclaimer-content">
       <p class="disclaimer-text">
-          The cost savings estimates on this website are for informational purposes only and based on general assumptions and publicly available data. Actual results may vary significantly based on your specific business circumstances, transaction volumes, and market conditions. These estimates do not constitute guarantees, formal quotes, or professional advice. You should consult qualified advisors before making business decisions. Outpost disclaims all liability for any loss arising from reliance on these projections. Viewing this website does not create any client relationship. Governed by English law. 2025      </p>
+        The cost savings estimates on this website are for informational purposes only and based on general assumptions and publicly available data...
+      </p>
     </div>
   </div>
 </footer>
