--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ td{padding:18px 26px}
     <div class="section-header">
       <h2 class="section-title">The hidden cost of global expansion</h2>
       <p class="section-subtitle">
-        Global gaming platforms expanding to Mexico are leaving substantial value on the table every year from inefficient payments and tax infrastructure.
-        We estimate it's costing AppNation $<span class="problem-dynamic">2.9M</span> per annum in app store fees and additional costs.
+        Global app platforms expanding are leaving substantial value on the table every year from inefficient payments and tax infrastructure or relying on App / Play stores for this.
+        We estimate it's costing AppNation $<span class="problem-dynamic">2.9M</span> per annum in App / Play store fees and additional costs.
       </p>
     </div>
     <div class="grid-3">
@@ -267,7 +267,7 @@ td{padding:18px 26px}
         </div>
         <div class="card-value">500+ hours</div>
         <div class="card-label">Time to set up alternatives</div>
-        <p class="card-description">Standing up payments, tax compliance, and legal entities takes significant time.</p>
+        <p class="card-description">DIY set up for payments, tax compliance, and legal requirements take significant time.</p>
       </div>
     </div>
   </div>
