--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ td{padding:18px 26px}
     </div>
     <div class="hero-callout">
       <p class="hero-callout-text">
-        <strong>Outpost</strong> partners with gaming platforms like <strong>AppNation</strong>
-        so they can sell in <strong><span id="callout-country">Mexico</span></strong> like a local.
+        <strong>Outpost</strong> partners with app platforms like <strong>AppNation</strong>
+        so they can sell <strong><span>globally</span></strong> like a local.
         Offload your tax, compliance, payments, legal and operational burdens to Outpost.
       </p>
     </div>
