--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+  <!-- Google Font (AppNation style) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
 <style>
   :root{
     /* AppNation-ish palette */
@@ -47,11 +53,11 @@
   
   *{margin:0;padding:0;box-sizing:border-box;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
   html,body{height:100%}
-  body{
+   body{
     background:var(--bg-primary);
     color:var(--text-primary);
-    font-family: ui-sans-serif,system-ui,-apple-system,"Inter","SF Pro Text","Segoe UI",Roboto,Arial,sans-serif;
-    font-size:16px;line-height:1.6;letter-spacing:-0.01em;overflow-x:hidden
+    font-family:"Space Grotesk", ui-sans-serif, system-ui, -apple-system, "Inter","SF Pro Text","Segoe UI", Roboto, Arial, sans-serif;
+    font-size:16px; line-height:1.6; letter-spacing:-0.01em; overflow-x:hidden;
   }
 
   .container{max-width:1120px;margin:0 auto;padding:0 24px;position:relative;z-index:1}
